# openclaw-guardian

./: .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.base.json  vite.test.config.ts
.github/workflows/: ci.yml
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: App.test.tsx  SnapshotList.test.tsx  StatusLight.test.tsx  TrayMenu.test.tsx
src/components/: ConfirmDialog.tsx  DiffSummaryBadge.tsx  RelativeTime.tsx  SnapshotList.tsx  StatusLight.tsx  Toast.tsx  TrayMenu.tsx
src/styles/: animations.css  global.css
