[package]
name = "openclaw-guardian"
version = "0.1.0"
description = "OpenClaw Guardian desktop shell"
authors = ["OpenClaw Guardian Team"]
edition = "2021"

[lib]
name = "openclaw_guardian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
